Release notes for Sonar Runner improvements.
+review REVIEW-5170